--- a/web/misPublicaciones.xhtml
+++ b/web/misPublicaciones.xhtml
@@ -107,7 +107,7 @@
                             <h:commandButton value="Eliminar" action="#{beanPublicacion.definirActividad(publicacion, false)}" />
                         </p:column>-->
                     </p:dataTable>
-                    <p:gmap center="36.890257,30.707417" zoom="13" type="HYBRID" style="width:100%;height:400px" model="#{markersView.simpleModel}" />
+                    <p:gmap center="36.890257,30.707417" zoom="13" type="HYBRID" style="width:100%;height:400px" model="#{beanPublicacion.mostrarMarcadores(beanLogout.id)}" />
                 </div>
             </h:form>
             <h:form id="boton">
